--- a/prescription-drug-trap.html
+++ b/prescription-drug-trap.html
@@ -964,7 +964,15 @@
         <p>Your health is not a profit center. Your medications are not luxury purchases. Your life is not a business model.</p>
         
         <p>Stop accepting pharmaceutical extortion. You deserve better, and alternatives exist.</p>
-    </article>
+    <div style="background: #f8f9fa; padding: 2rem; border-radius: 10px; margin: 2rem 0;">
+<h3 style="margin-bottom: 1rem; color: #1a1a2e;">Related Articles:</h3>
+<ul style="list-style: none; padding: 0;">
+<li style="margin-bottom: 0.5rem;">📄 <a href="/diabetes-trap.html" style="color: #667eea; font-weight: bold;">Diabetes Insurance Trap</a></li>
+<li style="margin-bottom: 0.5rem;">📄 <a href="/coinsurance-trap.html" style="color: #667eea; font-weight: bold;">Coinsurance Trap</a></li>
+</ul>
+</div>
+
+</article>
     
     <!-- Professional Footer -->
     <footer>
